[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infra-draw"
version = "1.0.0"
description = "Cloud-agnostic CLI that turns live infrastructure into architecture diagrams"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "infra-draw contributors" }]

dependencies = [
    "boto3>=1.34",
    "diagrams>=0.24",
    "click>=8.1",
    "tqdm>=4.66",
    "prompt-toolkit>=3.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "moto>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
infra-draw = "infra_draw.main:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["infra_draw"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
